--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
 <html lang="en">
-<head>
+<head ng-app="JobCat">
   <meta charset="utf-8">
 
   <title>JobCat</title>
@@ -18,21 +18,31 @@
 
   <!-- Latest compiled and minified JavaScript -->
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script> -->
+
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/controllers/mainCtrl.js"></script>
 </head>
 
-<body>
-    <div class="container">
+<body ng-controller="mainController">
+    <div class="container create-job">
         <div class="form-group">
           <label for="job">Job:</label>
           <input type="text" class="form-control" id="job">
+          <input type="submit" class="btn btn-primary pull-right" value="Submit Job" />
         </div>
 
-        <div>
-
+        <div class="job-feed">
+          <div class="job" ng-repeat="job in jobs">
+            <h3>{{ job.title }}</h3>
+            <h5>Days: {{ job.days }}</h5>
+            <h5>Hours per week: {{ job.hoursPerWeek }}</h5>
+            <h5>Contact Information: {{ job.contact }}</h5>
+            <p>Description: {{ job.description }}</p>
+          </div>
         </div>
     </div>
 
 
-  <!-- <script src="js/scripts.js"></script> -->
 </body>
 </html>
