--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 
-<html lang="en">
-<head ng-app="JobCat">
+<html lang="en" ng-app="JobCat">
+<head>
   <meta charset="utf-8">
 
   <title>JobCat</title>
