--- a/public/views/index.html
+++ b/public/views/index.html
@@ -8,31 +8,28 @@
   <meta name="description" content="Northwestern/Evanston Craigslist">
   <meta name="author" content="ASG Services">
 
-  <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-1.12.0.js"></script>
 
+  <!-- Bootstrap -->
   <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
-
-  <!-- Optional theme -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css" integrity="sha384-aUGj/X2zp5rLCbBxumKTCw2Z50WgIr1vs/PFN4praOTvYXWlVyh2UtNUU0KAUhAX" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   <!-- Latest compiled and minified JavaScript -->
-  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script> -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/controllers/mainCtrl.js"></script>
+  <!-- Custom JS -->
+  <script src="js/script.js"></script>
 </head>
 
-<body ng-controller="mainController">
+<body>
     <div class="container create-job">
         <div class="form-group">
           <label for="job">Job Description:</label>
-          <input ng-model="newJob.description" type="text" class="form-control" id="job">
-          <input type="submit" class="btn btn-primary pull-right" value="Submit Job" ng-click="addJob()" />
+          <input type="text" class="form-control" id="job">
+          <input type="submit" class="btn btn-primary pull-right" value="Submit Job" />
         </div>
 
-        <div class="job-feed">
+        <!-- <div class="job-feed">
           <div class="job" ng-repeat="job in jobs">
             <h3>{{ job.title }}</h3>
             <h5>Days: {{ job.days }}</h5>
@@ -40,7 +37,7 @@
             <h5>Contact Information: {{ job.contact }}</h5>
             <p>Description: {{ job.description }}</p>
           </div>
-        </div>
+        </div> -->
     </div>
 
 
