--- a/public/views/index.html
+++ b/public/views/index.html
@@ -22,23 +22,46 @@
 </head>
 
 <body>
-    <div class="container create-job">
-        <div class="form-group">
-          <label for="job">Job Description:</label>
-          <input type="text" class="form-control" id="job">
-          <input type="submit" class="btn btn-primary pull-right" value="Submit Job" />
-        </div>
+  <div class="container create-job">
+      <div class="form-group">
+        <label for="job">Job Description:</label>
+        <input type="text" class="form-control" id="job">
+        <input type="submit" class="btn btn-primary pull-right" value="Submit Job" data-toggle="modal" data-target="#myModal" />
+      </div>
 
-        <!-- <div class="job-feed">
-          <div class="job" ng-repeat="job in jobs">
-            <h3>{{ job.title }}</h3>
-            <h5>Days: {{ job.days }}</h5>
-            <h5>Hours per week: {{ job.hoursPerWeek }}</h5>
-            <h5>Contact Information: {{ job.contact }}</h5>
-            <p>Description: {{ job.description }}</p>
-          </div>
-        </div> -->
+      <!-- <div class="job-feed">
+        <div class="job" ng-repeat="job in jobs">
+          <h3>{{ job.title }}</h3>
+          <h5>Days: {{ job.days }}</h5>
+          <h5>Hours per week: {{ job.hoursPerWeek }}</h5>
+          <h5>Contact Information: {{ job.contact }}</h5>
+          <p>Description: {{ job.description }}</p>
+        </div>
+      </div> -->
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Submit New Job</h4>
+        </div>
+        <div class="modal-body">
+          <p>Job Title</p>
+          <p>Job Description</p>
+          <p>Other Info</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+      
     </div>
+  </div>
 
 
 </body>
